clients/client-test/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  type: NodePort
  selector:
    app: laravel
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
